fixed a bug where long names with hyphens were being wrapped

--- a/src/style.css
+++ b/src/style.css
@@ -98,6 +98,7 @@ li {
   padding: 0 4px;
   text-align: right;
   border-right: 1px solid lightgray;
+  white-space: nowrap;
 }
 .message .text {
   display: table-cell;
